# Compiler

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_test.yml
include/CodeAnalysis/: Evaluator.h
include/CodeAnalysis/Binding/: Binder.h  BoundOperators.h
include/CodeAnalysis/Syntax/: Expression.h  Lexer.h  Parser.h  Syntax.h  SyntaxFacts.h  SyntaxTree.h
include/Compiler/: Binder.h  Evaluator.h  Expression.h  Lexer.h  Parser.h  Syntax.h  SyntaxFacts.h  SyntaxTree.h
src/: Evaluator.cpp  Expression.cpp  Lexer.cpp  Parser.cpp  Program.cpp  Syntax.cpp  SyntaxFacts.cpp  SyntaxTree.cpp  main.cpp
src/CodeAnalysis/: Evaluator.cpp
src/CodeAnalysis/Binding/: BoundOperators.cpp
src/CodeAnalysis/Syntax/: Expression.cpp  Lexer.cpp  Parser.cpp  Syntax.cpp  SyntaxFacts.cpp  SyntaxTree.cpp
src/Tests/: CMakeLists.txt  LexerTests.cpp  LexerTests.h  YacTest_main.cpp
src/Tests/CodeAnalysis/: AnnotatedText.cpp  AnnotatedText.h  EvaluationTests.cpp
src/Tests/CodeAnalysis/Syntax/: AssertingEnumerator.cpp  AssertingEnumerator.h  LexerTests.cpp  LexerTestsSingle.cpp  ParserTests.cpp  SyntaxFactTests.cpp
src/Tests/CodeAnalysis/Text/: SourceTextTests.cpp
src/YAC/CodeAnalysis/: Compilation.cpp  Compilation.h  Diagnostics.cpp  Diagnostics.h  DiagnosticsBag.cpp  DiagnosticsBag.h  EvaluationResult.cpp  EvaluationResult.h  Evaluator.cpp  Evaluator.h
src/YAC/CodeAnalysis/Binding/: Binder.cpp  Binder.h  BoundBlockStatement.cpp  BoundBlockStatement.h  BoundExpressionStatement.cpp  BoundExpressionStatement.h  BoundForStatement.cpp  BoundForStatement.h  BoundGlobalScope.cpp  BoundGlobalScope.h  BoundIfStatement.cpp  BoundIfStatement.h  BoundNode.cpp  BoundNode.h  BoundOperators.cpp  BoundOperators.h  BoundScope.cpp  BoundScope.h  BoundStatement.h  BoundVariableDeclaration.cpp  BoundVariableDeclaration.h  BoundWhileStatement.cpp  BoundWhileStatement.h
src/YAC/CodeAnalysis/Symbols/: VariableSymbol.cpp  VariableSymbol.h
src/YAC/CodeAnalysis/Syntax/: BlockStatementSyntax.cpp  BlockStatementSyntax.h  CompilationUnit.cpp  CompilationUnit.h  CompilationUnitSyntax.cpp  CompilationUnitSyntax.h  ElseClauseSyntax.cpp  ElseClauseSyntax.h  Expression.cpp  Expression.h  ExpressionStatementSyntax.cpp  ExpressionStatementSyntax.h  ForStatementSyntax.cpp  ForStatementSyntax.h  IfStatementSyntax.cpp  IfStatementSyntax.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  StatementSyntax.h  Syntax.cpp  Syntax.h  SyntaxFacts.cpp  SyntaxFacts.h  SyntaxTree.cpp  SyntaxTree.h  VariableDeclarationSyntax.cpp  VariableDeclarationSyntax.h  WhileStatementSyntax.cpp  WhileStatementSyntax.h
src/YAC/CodeAnalysis/Text/: SourceText.cpp  SourceText.h  TextLine.cpp  TextLine.h  TextSpan.cpp  TextSpan.h
src/YAC/Utils/: Caster.h
